Add average ride length and count per month per user plot

--- a/r-files/Changelog.txt
+++ b/r-files/Changelog.txt
@@ -1,15 +1,22 @@
 # Changelog
 This file contains the notable changes to the project
 
-Version 1.0.4 (2023-08-20)
+Version 1.0.5 (2024-08-21)
+## New
+    - Add average ride length and count per month per user plot
+## Fix
+    - Removed trips which length > 24 hours (7958 rows)
+    - Refactor and reorganize the code
+
+Version 1.0.4 (2024-08-20)
 ## New
     - Add number of rides per month per membership plots
 
-Version 1.0.3 (2023-08-19)
+Version 1.0.3 (2024-08-19)
 ## New
     - Add descriptive statistics and exploratory analysis for each month
 
-Version 1.0.2 (2023-08-16)
+Version 1.0.2 (2024-08-16)
 ## Fix
     - Removed duplicates based on ride_id field (211 rows)
 
